--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,15 @@
             <version>2.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.10.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
 
     </dependencies>
 
